@@ -13,7 +13,7 @@ Balance: <b>{TOTAL_BTC}</b> BTC in <b>{UNSPENT_OUTS}</b> outputs (<a href="balan
 Wallet filename: <b class="mono"><!--WALLET_FILENAME--></b><br>
 <br>
 Quick wallet switch: <!--ONEWALLET-->
-<i>(switching a wallet may take a few seconds)</i><br>
+<i>(loading a new wallet may take a few seconds)</i><br>
 
 <hr>
 <div id="showwal">
