@@ -1,10 +1,9 @@
 * Add support to P2SH & multisig transactions to the wallet
 * Complete "chaindl" tool - a dedicated blockchain downloader
-* Add some an address book for MakeTx destination addresses
+* Add some address book to MakeTx WebUI
 * Do something with the fixed 129.132.230.0/24
 * Improve the database folder locking in Linux
 * Implement a secured password input method for the wallet app (for Windows with no mingw)
-* Implement a cache for address balances so switching between wallets would be quick
 * Try to make own (faster) implementation of sha256 and rimp160
 * Try to improve initial chain download speed
 * The best chain should be decided on the amount of hashing work, not the length - SetBestChain()
